--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js",
-    "start2": "node /view/index.html",
-    "nm": "nodemon app.js"
+    "dev": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -24,9 +23,15 @@
     "dotenv": "^11.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
+    "https": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.15",
     "pug": "^3.0.2",
+    "qs": "^6.10.3",
     "session": "^0.1.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.6.0",
+    "nodemon": "^2.0.15"
   }
 }
