--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/hsh411/Test_Social_Login#readme",
   "dependencies": {
     "axios": "^0.24.0",
+    "cors": "^2.8.5",
     "dotenv": "^11.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
@@ -28,7 +29,8 @@
     "nodemon": "^2.0.15",
     "pug": "^3.0.2",
     "qs": "^6.10.3",
-    "session": "^0.1.0"
+    "session": "^0.1.0",
+    "store": "^2.0.12"
   },
   "devDependencies": {
     "eslint": "^8.6.0",
