--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   "homepage": "https://github.com/hsh411/Test_Social_Login#readme",
   "dependencies": {
     "axios": "^0.24.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^11.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
+    "express-session": "^1.17.2",
     "https": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.15",
